tests/ui/unit-struct.stderr
error: input must be a struct with fields
 --> tests/ui/unit-struct.rs:1:1
  |
1 | #[readonly::make]
  | ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `readonly::make` (in Nightly builds, run with -Z macro-backtrace for more info)
